// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders correctly h3 tag with text 1`] = `
<h3>
  Header
</h3>
`;

exports[`renders correctly with custom class 1`] = `
<h3
  className="test-class"
>
  Header
</h3>
`;
